[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12 ,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets[audio]>=4.5.0",
    "evaluate>=0.4.6",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "modal>=1.3.3",
    "transformers>=5.2.0",
]
